test/libsolidity/syntaxTests/storageLayoutSpecifier/negative_number.sol
contract A layout at -1 {}
// ----
// TypeError 6753: (21-23): The base slot of the storage layout evaluates to -1, which is outside the range of type uint256.
